# lanmessenger

./: .gitignore  README.md  engine.py  fmt.sh  friend.py  lib.py  main.py  main2.py  pyproject.toml  requirements.txt  server.py  ui.py
lib/: net.py  util.py  zmq.py
lib/net/: util.py  zero.py  zeroconf.py  zmq.py
lib/net/mesh/: node.py
lib/ui/: event.py  font.py  interface.py  mock.py  popup.py  settings.py
ui/: comms.py  friend.py  interface.py  mock.py  ui.py  util.py
