[tool.poetry]
name = "lanmessenger"
version = "0.1.0"
description = "an application for finding and messaging other applications on a LAN"
authors = ["Abizer Lokhandwala <abizer@abizer.me>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
zeroconf = "^0.71.0"
pyzmq = "^25.1.0"
netifaces = "^0.11.0"
dearpygui = "^1.9.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
